--- a/package.json
+++ b/package.json
@@ -3,8 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@material-ui/core": "^4.11.2",
+    "@material-ui/core": "^4.11.3",
     "@material-ui/icons": "^4.11.2",
+    "@material-ui/lab": "^4.0.0-alpha.57",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
@@ -13,18 +14,26 @@
     "@types/react-redux": "^7.1.12",
     "axios": "^0.21.0",
     "formik": "^2.2.6",
+    "google-login": "^1.0.3",
     "http-proxy-middleware": "^1.0.6",
+    "js-cookie": "^2.2.1",
+    "jwt-decode": "^3.1.2",
+    "moment": "^2.29.1",
     "node-sass": "^4.14.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-facebook-login": "^4.1.1",
+    "react-google-login": "^5.2.2",
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
+    "react-stripe-checkout": "^2.6.3",
     "react-toastify": "^6.2.0",
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
     "redux-thunk": "^2.3.0",
     "typescript": "~3.7.2",
+    "uuid": "^8.3.2",
     "yup": "^0.32.8"
   },
   "scripts": {
@@ -50,7 +59,7 @@
     ]
   },
   "devDependencies": {
-    "@types/react": "^16.14.2",
+    "@types/react": "^17.0.0",
     "@types/react-dom": "^16.9.10",
     "@types/react-router-dom": "^5.1.6"
   }
