--- a/package.json
+++ b/package.json
@@ -3,9 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@date-io/date-fns": "1.x",
     "@material-ui/core": "^4.11.3",
     "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.57",
+    "@material-ui/pickers": "^3.2.10",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
@@ -13,6 +15,7 @@
     "@types/node": "^12.0.0",
     "@types/react-redux": "^7.1.12",
     "axios": "^0.21.0",
+    "date-fns": "^2.17.0",
     "formik": "^2.2.6",
     "google-login": "^1.0.3",
     "http-proxy-middleware": "^1.0.6",
