--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-scripts": "4.0.1",
     "react-stripe-checkout": "^2.6.3",
     "react-toastify": "^6.2.0",
+    "react-transition-group": "^4.4.1",
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
     "redux-thunk": "^2.3.0",
